# ripper-bot

./: .env.example  README.md  ecosystem.config.js  pyproject.toml  run.sh
main/: config.py  main.py
main/utils/: discord_helpers.py  ocr_processor.py  pdf_builder.py
